...
            android:layout_marginTop="10dp"
            android:background="@drawable/border_round"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textViewResultPlainText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:linksClickable="true"
                android:maxLines="10"
                android:scrollbars="vertical"
...
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.5" />

    <Button
        android:id="@+id/buttonClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
...
