...
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.7"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/buttonHide"
            android:layout_width="0dip"
            android:layout_height="210dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/card"
            android:clickable="true"
...

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonReveal"
            android:layout_width="0dip"
            android:layout_height="210dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/card"
            android:clickable="true"
...
