<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/file_select_none" />

        <TextView
            android:id="@+id/textViewFileInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/textColorSecondary"
            android:textStyle="italic|bold"
            android:visibility="gone" />

    </LinearLayout>

    <Button
        android:id="@+id/selectFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_select" />

</LinearLayout>