...
                android:layout_marginTop="10dp"
                android:background="@drawable/border_round"
                android:orientation="vertical"
                android:padding="15dp">

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hide_input_text_hint"
                    android:importantForAutofill="no"
                    android:inputType="textAutoComplete"
                    android:maxLines="10"
...
